# cpp-pool

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake.yml
include/: pool.hpp
test/: pool_test.cpp
